# backstage-bigband

./: README.md
examples/rust/: README.md
examples/rust/backend-plugin/: Cargo.toml  README.md
examples/rust/backend-plugin/src/: bindings.rs  lib.rs
examples/rust/backend-plugin/wit/: backstage-backend-plugin.wit  world.wit
examples/rust/frontend-plugin/: Cargo.toml  README.md
examples/rust/frontend-plugin/public/components/ExampleComponent/: ExampleComponent.tsx
examples/rust/frontend-plugin/public/components/ExampleFetchComponent/: index.ts
examples/rust/frontend-plugin/src/: bindings.rs  lib.rs
examples/rust/frontend-plugin/wit/: backstage-frontend-plugin.wit  world.wit
